4-chaos-testing/virtualservice.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
  - productcatalogservice
  http:
  - match: #checkout -> productcatalog fails 100% of the time (HTTP status 400)
    - sourceLabels:
        app: checkoutservice
    fault:
      abort:
        percent: 100
        httpStatus: 400
    route:
    - destination:
        host: productcatalogservice
        subset: v1
  - route: # all other productcatalog requests (like from the frontend) work normally
    - destination:
        host: productcatalogservice
        subset: v1
